# UnifySDK

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  Earthfile  FAQ.md  LICENSE.md  README.md  common.nix  copyright  flake.nix  helper.mk  justfile  libunify.nix  overlay.nix  python.nix  release_notes.md  shell.nix  zpc.nix
applications/: CMakeLists.txt
applications/angel/: CMakeLists.txt  Cargo.toml  build.rs  readme_developer.md  readme_user.md  release_notes.md
applications/angel/debconf/: postinst  service
applications/angel/src/: cache.rs  main.rs  mqtt_client.rs  mqtt_handler.rs
applications/aox/: CMakeLists.txt
applications/aox/applications/: CMakeLists.txt
applications/aox/components/: CMakeLists.txt
applications/bt_host_empty/: CMakeLists.txt
applications/cpc-hci-bridge/: CMakeLists.txt  cpc-hci-bridge.c  readme_user.md
applications/cpc-hci-bridge/debconf/: postinst  prerm  uic-cpc-hci-bridge.service
applications/cpcd/: CMakeLists.txt  readme_user.md  release_notes.md
applications/cpcd/debconf/: config.in  postinst.in  prerm.in  templates.in
applications/demo_uic_lib/: CMakeLists.txt  main.c
applications/dev_ui/dev_cli/: CMakeLists.txt  main.c  readme_developer.md  readme_user.md
applications/dev_ui/dev_gui/: CMakeLists.txt  Licences.txt  package.json  readme_developer.md  readme_user.md  release_notes.md  tsconfig.json
applications/examples/: CMakeLists.txt
applications/examples/applications/: CMakeLists.txt
applications/gms/: CMakeLists.txt  Cargo.toml  readme_user.md  release_notes.md
applications/gms/debconf/: postinst  service
applications/gms/src/: cache.rs  main.rs  mqtt_handler.rs
applications/home_assistant/: LICENSE  __init__.py  base_unify_entity.py  config_flow.py  const.py  light.py  manifest.json  node_state_monitor.py  readme.md  sensor.py  strings.json  switch.py
applications/image_provider/: CMakeLists.txt  Cargo.toml  build.rs  readme_developer.md  readme_user.md  release_notes.md
applications/image_provider/.cargo/: config
applications/image_provider/debconf/: postinst  service
applications/image_provider/examples/: images.json
applications/image_provider/src/: image_watcher.rs  main.rs  mqtt_client.rs  mqtt_handler.rs  mqtt_ota.rs
applications/matter_bridge/: CMakeLists.txt
applications/matter_bridge/debconf/: postinst.in  prerm.in  uic-matter-bridge.service
applications/matter_bridge/doc/: Bridge_design.md  interaction_diagram.pu
applications/matter_bridge/include/: matter_data_storage.hpp
applications/matter_bridge/scripts/: matter_device_type_parse.py
applications/matter_bridge/src/: attribute_state_cache.cpp  demo_uic_cli.cpp  demo_uic_cli.h  matter.h  matter_bridge_config.c  matter_bridge_config.h  matter_bridge_config_fixt.h  matter_bridge_main.cpp  matter_data_storage.cpp
applications/matter_bridge/test/: CMakeLists.txt  hello_gmock.cpp  workaround.hpp
applications/matter_bridge/zap/: gen-templates.json
applications/nal/: CMakeLists.txt  Cargo.toml  build.rs  readme_user.md  release_notes.md
applications/nal/debconf/: postinst  service
applications/nal/src/: cache.rs  main.rs  mqtt_handler.rs
applications/openthread_border_router/: CMakeLists.txt  readme_user.md  release_notes.md
applications/openthread_border_router/cmake/: options.cmake
applications/openthread_border_router/debconf/: postinst.in  postrm.in  prerm.in
applications/uhab/: __init__.py  base_unify_entity.py  manifest.json  readme_user.md  switch.py  unify_bridge.py
applications/upti_cap/: CMakeLists.txt  Cargo.toml  readme_user.md  release_notes.md
applications/upti_cap/debconf/: postinst  service
applications/upti_writer/: CMakeLists.txt  Cargo.toml  build.rs  readme_user.md  release_notes.md
applications/upvl/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  readme_developer.md  readme_user.md  release_notes.md
applications/zigbeed/: CMakeLists.txt  release_notes.md
applications/zigpc/: CMakeLists.txt  Getting_Started.md  coding_standard.md  coding_standard.zigpc.md  main.c  readme_developer.md  readme_user.md  release_notes.md
applications/zpc/: CMakeLists.txt  Cargo.toml  how_to_implement_new_zwave_command_classes.md  how_to_implement_zwave_command_classes.md  how_to_implement_zwave_command_classes.rst  how_to_interact_with_clusters.rst  how_to_write_uam_files_for_the_zpc.md  main.c  readme_certification.md  readme_developer.md  readme_user.md  release_notes.md
components/: CMakeLists.txt  Cargo.toml
components/assets/: libuic.pc.in  libunify.pc.in  libunify_static.pc.in
components/testframework/: CMakeLists.txt  add_mock.cmake  target_add_unittest.cmake  unify_cmock_config.yml  zwave_cmock_config.yml  zwave_unity_config.yml
components/uic_attribute_mapper/: CMakeLists.txt
components/uic_attribute_resolver/: CMakeLists.txt
components/uic_attribute_store/: CMakeLists.txt
components/uic_attribute_utils/: CMakeLists.txt
components/uic_config/: CMakeLists.txt
components/uic_contiki/: CMakeLists.txt  contiki.dox
components/uic_datastore/: CMakeLists.txt
components/uic_definitions/: CMakeLists.txt
components/uic_dotdot/: CMakeLists.txt
components/uic_dotdot_attribute_store/: CMakeLists.txt
components/uic_dotdot_mqtt/: CMakeLists.txt
components/uic_gbl_interface/: CMakeLists.txt
components/uic_log/: CMakeLists.txt
components/uic_main/: CMakeLists.txt
components/uic_main_fd/: CMakeLists.txt
components/uic_mqtt/: CMakeLists.txt
components/uic_multi_invoke/: CMakeLists.txt
components/uic_ota/: CMakeLists.txt
components/uic_rust/: CMakeLists.txt
components/uic_smartstart_management/: CMakeLists.txt
components/uic_stdin/: CMakeLists.txt
components/unify_application_monitoring/: CMakeLists.txt
components/unify_attribute_poll/: CMakeLists.txt  Cargo.toml  build.rs
components/unify_dotdot_attribute_store/: CMakeLists.txt
components/unify_node_state_monitor/: CMakeLists.txt
components/unify_validator/: CMakeLists.txt
(+23630 files in other folders)
