[workspace]

members = [
    "applications/upvl",
    "applications/gms",
    "applications/image_provider",
    "applications/nal",
    "applications/upti_cap",
    "applications/upti_writer",
    "applications/zpc/components/zwave_rust/rust_command_classes",
    "applications/zpc/components/zwave_rust/zwave_rust_proc_macros",
    "applications/zpc/components/zwave_rust/zwave_controller_sys",
    "applications/zpc/components/zwave_rust/zwave_tx_sys",
    "applications/zpc/components/zwave_rust/zwave_rust_cc_gen",
    "applications/zpc/components/zwave_rust/zwave_volatile_attr_poll_manager",
    "applications/zpc/components/zpc_attribute_store",
    "components/uic_rust/cargo-bindgen",
    "components/uic_rust/unify_tools",
    "components/uic_rust/unify_config_sys",
    "components/uic_rust/unify_sl_status_sys",
    "components/uic_rust/unify_log_sys",
    "components/uic_rust/unify_middleware",
    "components/uic_rust/unify_proc_macro",
    "components/uic_rust/unify_attribute_store_sys",    
    "components/uic_rust/unify_mqtt_sys",    
    "components/uic_rust/unify_main_sys",
    "components/unify_attribute_poll",
]

# create a release profile with debug settings
# release bins are required to package .deb files.
[profile.release]
debug-assertions = true
lto = true

[profile.RelWithDebInfo]
inherits = "dev"
opt-level = 3

[profile.dev]
rpath = true
