[workspace]

members = [
    "applications/upvl",
    "applications/gms",
    "applications/image_provider",
    "applications/nal",
    "applications/upti_cap",
    "applications/upti_writer",
    "applications/zpc/components/zwave_rust_proc_macros",
    "applications/zpc/components/zwave_rust_proc_macros_legacy",
    "applications/zpc/components/rust_command_class_frame_types",
    "applications/zpc/components/zpc_rust",
    "components/uic_rust/unify_tools",
    "components/uic_rust/unify_build_utils",
    "components/uic_rust/unify_config_sys",
    "components/uic_rust/unify_sl_status_sys",
    "components/uic_rust/unify_log_sys",
    "components/uic_rust/unify_middleware",
    "components/uic_rust/unify_proc_macro",
    "components/uic_rust/unify_attribute_store_sys",
    "components/uic_rust/unify_attribute_utils_sys",
    "components/uic_rust/unify_mqtt_sys",
    "components/uic_rust/unify_main_sys",
    "components/unify_attribute_poll",
]

# create a release profile with debug settings
# release bins are required to package .deb files.
[profile.release]
debug-assertions = true
lto = true

[profile.RelWithDebInfo]
inherits = "dev"
opt-level = 3

[profile.dev]
rpath = true
